<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    android:src="@drawable/back" />

                <com.app.avplayer.external.CustomTextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/backBtn"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:typeface="@string/font_regular" />
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.app.avplayer.external.CustomTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/file_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:typeface="@string/font_bold" />

            <com.app.avplayer.external.CustomTextView
                android:id="@+id/fileName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:typeface="@string/font_bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.app.avplayer.external.CustomTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/file_path"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:typeface="@string/font_bold" />

            <com.app.avplayer.external.CustomTextView
                android:id="@+id/filePath"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:typeface="@string/font_bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.app.avplayer.external.CustomTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/size"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:typeface="@string/font_bold" />

            <com.app.avplayer.external.CustomTextView
                android:id="@+id/size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:typeface="@string/font_bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.app.avplayer.external.CustomTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/date_created"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:typeface="@string/font_bold" />

            <com.app.avplayer.external.CustomTextView
                android:id="@+id/dateCreated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:typeface="@string/font_bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/grey" />


    </LinearLayout>
</layout>